--- a/views/addNewUser.ejs
+++ b/views/addNewUser.ejs
@@ -1,32 +1,40 @@
 
 <%- include('include/_header') %>
 
-<section class="myForm">
-    <div class="mask bg-dark d-flex align-items-center h-100">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    <div class="card gradient-custom" style="border-radius: 1rem; background: linear-gradient(to bottom, rgba(50,69,231,0.66), rgba(155,42,232,0.74));">
-                        <div class="card-body p-5 text-center">
-                            <div class="my-md-5">
+<section class="text-center">
+    <!-- Background image -->
+    <div class="p-5 bg-image" style="
+        background-image: url('https://mdbootstrap.com/img/new/textures/full/252.jpg');
+        height: 300px;
+        "></div>
+    <!-- Background image -->
 
-                                <div class="text-center pt-1">
-                                    <h1 class="fw-bold my-3 text-white text-uppercase">Add User</h1>
-                                </div>
+    <div class="container container-sm">
+        <div class="card mx-4 mx-md-5 shadow-5-strong"
+             style="
+             margin-top: -100px;
+             background: hsla(0, 0%, 100%, 0.8);
+             backdrop-filter: blur(30px);">
 
-                                <form action="/users/add-user/" method="POST" id="add-user">
+            <div class="card-body py-5 px-md-5">
+                <div class="row d-flex justify-content-center">
+                    <div class="col-lg-8">
+                        <h2 class="fw-bold mb-5">CREATE PROFILE</h2>
+                        <hr>
 
-                                    <%- include('include/_form')  %>
+                        <form action="/users/add-user/" method="POST" id="add-user">
 
-                                </form>
+                            <%- include('include/_form')  %>
 
-                            </div>
-                        </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
+
 </section>
 
 <%- include('include/_footer') %>
