--- a/views/include/_usersTable.ejs
+++ b/views/include/_usersTable.ejs
@@ -1,38 +1,62 @@
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-12">
-            <div class="table-responsive">
-                <table class="table table-white align-middle bg-white table-bordered mb-0">
-                    <thead class="bg-dark-subtle">
-                    <tr>
-                        <th>#</th>
-                        <th scope="col">NAME/USERS</th>
-                        <th scope="col">EMAIL</th>
-                        <th scope="col">GENDER</th>
-                        <th scope="col">STATUS</th>
-                        <th scope="col">ACTION</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <% for (var i = 0; i < users.length; i++) { %>
 
-                        <tr>
-                            <th scope="row"><%= i + 1%></th>
-                            <td><%= users[i].firstName + " " + users[i].lastName %></td>
-                            <td><%= users[i].email %></td>
-                            <td><%= users[i].gender %></td>
-                            <td><%= users[i].status %></td>
-                            <td>
-                                <a href=" <%= "/users/view-user/" + users[i].id %> "><button type="button" class="btn btn-primary mr-1">View</button></a>
-                                <a href=" <%= "/users/update-user/" + users[i].id %> "><button type="button" class="btn btn-primary btn-success mr-1">Edit</button></a>
-                                <a href=" <%= "/users/delete-user/" + users[i].id %> "><button type="button" class="btn btn-primary btn-danger">Delete</button></a>
-                            </td>
-                        </tr>
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css /> -->
 
-                    <% } %>
-                    </tbody>
-                </table>
+<!--MDB Tables-->
+<div class="container mt-4 align-content-center">
+
+    <div class="card mb-4">
+        <div class="card-body">
+            <!-- Grid row -->
+            <div class="row">
+                <!-- Grid column -->
+                <div class="col-md-12">
+                    <h2 class="pt-3 pb-2 text-center font-bold font-up">User Table <i class="fa fa-user-group"></i></h2>
+                    <a href="/users/add-user" class="btn btn-sm btn-primary text-center"><i class="fa fa-plus-circle"></i> Add New</a>
+                    <div class="input-group md-form form-sm form-2 pl-0 pr-2 mt-3">
+                        <input class="form-control my-2 py-1 pl-3" type="search" placeholder="Search user here..." aria-label="Search">
+                    </div>
+                </div>
+                <!-- Grid column -->
             </div>
+            <!-- Grid row -->
+            <!--Table-->
+            <table class="table table-striped table-responsive-lg text-center">
+                <!--Table head-->
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">NAME/USERS</th>
+                    <th scope="col">EMAIL</th>
+                    <th scope="col">GENDER</th>
+                    <th scope="col">STATUS</th>
+                    <th scope="col">ACTION</th>
+                </tr>
+                </thead>
+                <!--Table head-->
+                <!--Table body-->
+                <tbody>
+                <% for (var i = 0; i < users.length; i++) { %>
+
+                    <tr>
+                        <th scope="row"><%= i + 1%></th>
+                        <td><%= users[i].firstName + " " + users[i].lastName %></td>
+                        <td><%= users[i].email %></td>
+                        <td><%= users[i].gender %></td>
+                        <td><%= users[i].status %></td>
+                        <td>
+                            <a href=" <%= "/users/view-user/" + users[i].id %> " class="btn btn-sm btn-success"><i class="fa fa-search"></i></a>
+                            <a href=" <%= "/users/update-user/" + users[i].id %> " class="btn btn-sm btn-primary"><i class="fa fa-pencil-alt"></i></a>
+                            <a href=" <%= "/users/delete-user/" + users[i].id %> " class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a>
+                        </td>
+                    </tr>
+
+                <% } %>
+                </tbody>
+                <!--Table body-->
+            </table>
+            <!--Table-->
         </div>
     </div>
+
 </div>
+<!--MDB Tables-->
