--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
             <div class="card-body py-5 px-md-5">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">HOMEPAGE</h2>
+                        <h2 class="fw-bold mb-5">HOMEPAGE <i class="fa fa-home"></i></h2>
 
                         <a href="/login"><button class="btn btn-dark btn-lg btn-rounded px-5">LOGIN</button></a><p></p>
                         <a href="/signup"><button class="btn btn-dark btn-lg btn-rounded px-5">SIGNUP</button></a><p></p>
