--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -17,7 +17,7 @@
             <div class="card-body py-5 px-md-5">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">LOGIN</h2>
+                        <h2 class="fw-bold mb-5">LOGIN <i class="fa fa-sign-in-alt"></i></h2>
 
                         <form action="/login" method="POST" id="user-login">
 
