--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -19,7 +19,7 @@
             <div class="card-body py-5 px-md-5">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">SIGN UP</h2>
+                        <h2 class="fw-bold mb-5">SIGN UP <i class="fa fa-thumbs-up"></i></h2>
 
                         <form action="/signup" method="POST" id="user-signup">
 
