gpu table and relevant functionalities added

--- a/views/editUserSelf.ejs
+++ b/views/editUserSelf.ejs
@@ -31,8 +31,7 @@
                             <%- include('include/_editForm'); %>
 
                             <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
-                            <a href="/users"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
-
+                            <a href="/userpage"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
                         </form>
 
                     </div>
