--- a/views/include/_usersPgNavbar.ejs
+++ b/views/include/_usersPgNavbar.ejs
@@ -37,7 +37,7 @@
 
             <div class="d-flex align-items-center">
 
-                <a href=" <%= "/users/update-user/" + current_user.id %> ">
+                <a href="/userpage">
                     <button type="button" class="btn btn-primary px-3 me-2"><i class="fa fa-user-edit"></i> ACCOUNT</button>
                 </a>
 
