--- a/views/confirmMyGPUDeletion.ejs
+++ b/views/confirmMyGPUDeletion.ejs
@@ -1,4 +1,3 @@
-
 <%- include('include/_header') %>
 
 <section class="text-center">
@@ -19,19 +18,14 @@
             <div class="card-body py-5 px-md-5">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">
-                            UPDATE PROFILE
-                            <i class="fa <%= user.gender === 'Male' ? 'fa-male' : 'fa-female'%>"></i>
-                        </h2>
-                        <hr>
 
+                        <form action=" <%= "/userpage/delete-gpu/" + gpu.id + "?_method=DELETE"%> " method="POST">
 
-                        <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
+                            <h3>Are you sure you want to delete entry: <%= '"' + gpu.model + '"' %>?</h3>
+                            <hr>
 
-                            <%- include('include/_editForm'); %>
-
-                            <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
-                            <a href="/users"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
+                            <button type="submit" class="btn btn-danger btn-lg btn-rounded px-5 mr-3" value="confirm">Confirm</button>
+                            <a href="/userpage"><button type="button" class="btn btn-dark btn-lg btn-rounded px-5 mr-3">Cancel</button></a>
 
                         </form>
 
