fix for model and view

--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -65,14 +65,14 @@
     <h5><label for="role" class="text-uppercase">Role</label></h5>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" value="Admin" name="role" id="radio5" <%= user.role === 'admin' ? 'checked' : ''%>>
+        <input class="form-check-input" type="radio" value="admin" name="role" id="radio5" <%= user.role === 'admin' ? 'checked' : ''%>>
         <label class="form-check-label" for="radio5">
             Admin
         </label>
     </div>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" value="User" name="role" id="radio6" <%= user.role === 'user' ? 'checked' : ''%>>
+        <input class="form-check-input" type="radio" value="user" name="role" id="radio6" <%= user.role === 'user' ? 'checked' : ''%>>
         <label class="form-check-label" for="radio6">
             User
         </label>
