--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -8,7 +8,7 @@
         "></div>
     <!-- Background image -->
     <div class="container container-sm">
-        <div class="card mx-4 mx-md-5 shadow-5-strong"
+        <div class="card mx-4 mx-md-5 shadow-5-strong mb-5"
              style="
              margin-top: -100px;
              background: hsla(0, 0%, 100%, 0.8);
