--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -65,14 +65,14 @@
     <label for="role" class="text-uppercase">Status</label><br>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" value="Admin" name="role" id="radio5">
+        <input class="form-check-input" type="radio" value="admin" name="role" id="radio5">
         <label class="form-check-label" for="radio5">
             Admin
         </label>
     </div>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" value="User" name="role" id="radio6">
+        <input class="form-check-input" type="radio" value="user" name="role" id="radio6">
         <label class="form-check-label" for="radio6">
             User
         </label>
