--- a/views/include/_usersPgNavbar.ejs
+++ b/views/include/_usersPgNavbar.ejs
@@ -30,15 +30,15 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text-white text-uppercase" href="/users">Dashboard</a>
+                    <a class="nav-link text-white text-uppercase" href="/userpage">Dashboard</a>
                 </li>
             </ul>
             <!-- Left links -->
 
             <div class="d-flex align-items-center">
 
-                <a href="/userpage">
-                    <button type="button" class="btn btn-primary px-3 me-2"><i class="fa fa-user-edit"></i> ACCOUNT</button>
+                <a href=" <%= "/userpage/update-user/" + user.id %> ">
+                    <button type="button" class="btn btn-primary px-3 me-2"><i class="fa fa-user-edit"></i> Account</button>
                 </a>
 
                 <form action="/logout?_method=DELETE" method="POST">
