--- a/views/viewMyGPU.ejs
+++ b/views/viewMyGPU.ejs
@@ -10,7 +10,7 @@
     <!-- Background image -->
 
     <div class="container container-sm">
-        <div class="card mx-4 mx-md-5 shadow-5-strong"
+        <div class="card mx-4 mx-md-5 shadow-5-strong mb-5"
              style="
              margin-top: -100px;
              background: hsla(0, 0%, 100%, 0.8);
@@ -24,15 +24,39 @@
                     </div>
                 </div>
 
-                <div class="row d-flex justify-content-center mb-3">
-                    <div class="col-lg-8 text-left">
-                        <h3 class="">Email: <%= gpu.company %></h3>
-                        <h3 class="">Gender: <%= gpu.model %></h3>
-                        <h3 class="">Status: <%= gpu.size %></h3>
-                        <h3 class="">Role: <%= gpu.condition %></h3>
-                        <p class="">Details: <%= gpu.details %></p>
-                    </div>
-                </div>
+                <table class="table table-borderless table-sm table-responsive-lg text-right mb-3">
+
+                    <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr>
+                        <td class="text-bold">Company:</td>
+                        <td class="text-left"><%= gpu.company %></td>
+                    </tr>
+                    <tr>
+                        <td class="text-bold">Model:</td>
+                        <td class="text-left"><%= gpu.model %></td>
+                    </tr>
+                    <tr>
+                        <td class="text-bold">Size:</td>
+                        <td class="text-left"><%= gpu.size %></td>
+                    </tr>
+                    <tr>
+                        <td class="text-bold">Condition:</td>
+                        <td class="text-left"><%= gpu.condition %></td>
+                    </tr>
+                    <tr>
+                        <td class="text-bold">Details:</td>
+                        <td class="text-left"><%= gpu.details %></td>
+                    </tr>
+                    </tbody>
+
+                </table>
 
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
