--- a/views/include/_gpuTable.ejs
+++ b/views/include/_gpuTable.ejs
@@ -11,7 +11,7 @@
                 <!-- Grid column -->
                 <div class="col-md-12">
                     <h2 class="pt-3 pb-2 text-center font-bold font-up">GPU Table <i class="fa fa-computer-mouse"></i></h2>
-                    <a href="/users/add-user" class="btn btn-sm btn-primary text-center"><i class="fa fa-plus-circle"></i> Add New</a>
+                    <a href="/userpage/add-gpu" class="btn btn-sm btn-primary text-center"><i class="fa fa-plus-circle"></i> Add New</a>
                     <div class="input-group md-form form-sm form-2 pl-0 pr-2 mt-3">
                         <input class="form-control my-2 py-1 pl-3" type="search" placeholder="Search user here..." aria-label="Search">
                     </div>
