--- a/views/include/_usersPgNavbar.ejs
+++ b/views/include/_usersPgNavbar.ejs
@@ -37,6 +37,10 @@
 
             <div class="d-flex align-items-center">
 
+                <a href="/gpu">
+                    <button type="button" class="btn btn-primary px-3 me-2"><i class="fa fa-screwdriver"></i> GPU Table</button>
+                </a>
+
                 <a href=" <%= "/userpage/update-user/" + user.id %> ">
                     <button type="button" class="btn btn-primary px-3 me-2"><i class="fa fa-user-edit"></i> Account</button>
                 </a>
