--- a/views/include/_myGPUTable.ejs
+++ b/views/include/_myGPUTable.ejs
@@ -11,7 +11,7 @@
                 <!-- Grid column -->
                 <div class="col-md-12">
                     <h2 class="pt-3 pb-2 text-center font-bold font-up">GPU Table <i class="fa fa-computer-mouse"></i></h2>
-                    <a href="/gpu/add-gpu" class="btn btn-sm btn-primary text-center"><i class="fa fa-plus-circle"></i> Add New</a>
+                    <a href="/userpage/add-gpu" class="btn btn-sm btn-primary text-center"><i class="fa fa-plus-circle"></i> Add New</a>
                     <div class="input-group md-form form-sm form-2 pl-0 pr-2 mt-3">
                         <input class="form-control my-2 py-1 pl-3" type="search" placeholder="Search user here..." aria-label="Search">
                     </div>
@@ -37,6 +37,8 @@
                 <tbody>
                 <% for (var i = 0; i < gpu.length; i++) { %>
 
+                    <% if (gpu[i].assignedID === user.id) {%>
+
                         <tr>
                             <th scope="row"><%= i + 1%></th>
                             <td><%= gpu[i].company %></td>
@@ -44,11 +46,13 @@
                             <td><%= gpu[i].size %></td>
                             <td><%= gpu[i].condition %></td>
                             <td>
-                                <a href=" <%= "/gpu/" + gpu[i].id %> " class="btn btn-sm btn-success"><i class="fa fa-search"></i></a>
-                                <a href=" <%= "/gpu/update-gpu/" + gpu[i].id %> " class="btn btn-sm btn-primary"><i class="fa fa-pencil-alt"></i></a>
-                                <a href=" <%= "/gpu/delete-gpu/" + gpu[i].id %> " class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a>
+                                <a href=" <%= "/userpage/" + gpu[i].id %> " class="btn btn-sm btn-success"><i class="fa fa-search"></i></a>
+                                <a href=" <%= "/userpage/update-gpu/" + gpu[i].id %> " class="btn btn-sm btn-primary"><i class="fa fa-pencil-alt"></i></a>
+                                <a href=" <%= "/userpage/delete-gpu/" + gpu[i].id %> " class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a>
                             </td>
                         </tr>
+
+                    <%}%>
 
                 <% } %>
                 </tbody>
