--- a/views/userPage.ejs
+++ b/views/userPage.ejs
@@ -17,7 +17,7 @@
             <div class="col-lg-8 col-md-6 col-sm-4">
                 <div class="gradient-custom-2 h-100">
                     <div class="gpu_table">
-                        <%- include('include/_gpuTable') %>
+                        <%- include('include/_myGPUTable') %>
                     </div>
                 </div>
             </div>
