--- a/views/include/_myGPUTable.ejs
+++ b/views/include/_myGPUTable.ejs
@@ -35,12 +35,13 @@
                 <!--Table head-->
                 <!--Table body-->
                 <tbody>
+                <% var count = 1; %>
                 <% for (var i = 0; i < gpu.length; i++) { %>
 
                     <% if (gpu[i].assignedID === user.id) {%>
 
                         <tr>
-                            <th scope="row"><%= i + 1%></th>
+                            <th scope="row"><%= count %></th>
                             <td><%= gpu[i].company %></td>
                             <td><%= gpu[i].model %></td>
                             <td><%= gpu[i].size %></td>
@@ -52,6 +53,7 @@
                             </td>
                         </tr>
 
+                        <% count += 1; %>
                     <%}%>
 
                 <% } %>
