--- a/views/GPUPage.ejs
+++ b/views/GPUPage.ejs
@@ -23,8 +23,7 @@
         <!-- Section: Social media -->
         <section class="mb-4">
             <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/Talha-Rauf" role="button"
-            ><i class="fab fa-github"></i
-                ></a>
+            ><i class="fab fa-github"></i></a>
         </section>
 
     </div>
