--- a/views/confirmGPUDeletion.ejs
+++ b/views/confirmGPUDeletion.ejs
@@ -25,7 +25,7 @@
                             <hr>
 
                             <button type="submit" class="btn btn-danger btn-lg btn-rounded px-5 mr-3" value="confirm">Confirm</button>
-                            <a href="/gpuInfoPage"><button type="button" class="btn btn-dark btn-lg btn-rounded px-5 mr-3">Cancel</button></a>
+                            <a href="/gpu"><button type="button" class="btn btn-dark btn-lg btn-rounded px-5 mr-3">Cancel</button></a>
 
                         </form>
 
