--- a/views/include/_editGPUForm.ejs
+++ b/views/include/_editGPUForm.ejs
@@ -1,22 +1,22 @@
 
 <div class="form-outline">
-    <input type="text" id="company" class="form-control" name="company" required>
+    <input type="text" id="company" class="form-control" name="company" value="<%= gpu.company %>" required>
     <label for="company" class="form-label">Company</label>
 </div>
 
 <div class="form-outline mb-4">
-    <input id="model" type="text" class="form-control form-control-md" name="model" required>
+    <input id="model" type="text" class="form-control form-control-md" name="model" value="<%= gpu.model %>" required>
     <label for="model" class="form-label">Model</label>
 </div>
 
 <div class="form-outline mb-4">
-    <input id="size" type="text" class="form-control form-control-md" name="size" required>
+    <input id="size" type="text" class="form-control form-control-md" name="size" value="<%= gpu.size %>" required>
     <label for="size" class="form-label">Size</label>
 </div>
 
 <div class="row">
     <div class="col-md-6 mb-4">
-        <%- include('_selectCondition') %>
+        <%- include('_editCondition') %>
     </div>
     <div class="col-md-6 mb-4">
         <%- include('_selectUser') %>
@@ -24,8 +24,6 @@
 </div>
 
 <div class="form-outline form-text mb-4">
-    <input id="details" type="text" class="form-control form-control-md" name="details" required>
+    <input id="details" type="text" class="form-control form-control-md" name="details" value="<%= gpu.details %>" required>
     <label for="details" class="form-label">Details</label>
 </div>
-
-
