--- a/views/editGPU.ejs
+++ b/views/editGPU.ejs
@@ -19,7 +19,7 @@
             <div class="card-body py-5 px-md-5">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">ADD NEW</h2>
+                        <h2 class="fw-bold mb-5">EDIT DETAILS</h2>
                         <hr>
 
                         <form action="<%= "/gpu/update-gpu/" + gpu.id + "?_method=PATCH"%>" method="POST" id="add-user">
