--- a/views/include/_editGPUForm.ejs
+++ b/views/include/_editGPUForm.ejs
@@ -1,5 +1,5 @@
 
-<div class="form-outline">
+<div class="form-outline mb-4">
     <input type="text" id="company" class="form-control" name="company" value="<%= gpu.company %>" required>
     <label for="company" class="form-label">Company</label>
 </div>
@@ -19,7 +19,7 @@
         <%- include('_editCondition') %>
     </div>
     <div class="col-md-6 mb-4">
-        <%- include('_selectUser') %>
+        <%- include('_editSelectUser') %>
     </div>
 </div>
 
