--- a/views/include/_gpuForm.ejs
+++ b/views/include/_gpuForm.ejs
@@ -1,5 +1,5 @@
 
-<div class="form-outline">
+<div class="form-outline mb-4">
     <input type="text" id="company" class="form-control" name="company" required>
     <label for="company" class="form-label">Company</label>
 </div>
