--- a/views/include/_signUpForm.ejs
+++ b/views/include/_signUpForm.ejs
@@ -61,5 +61,9 @@
 
 </div>
 
+<label hidden="hidden">
+    <input hidden="hidden" name="role" value="user">
+</label>
+
 <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
 <a href="/"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
