--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -1,33 +1,39 @@
 <%- include('include/_header') %>
 
-<section class="text-center">
-    <!-- Background image -->
-    <div class="p-5 bg-image" style="
-        background-image: url('https://mdbootstrap.com/img/new/textures/full/252.jpg');
-        height: 300px;
-        "></div>
-    <!-- Background image -->
-    <div class="container container-sm">
-        <div class="card mx-4 mx-md-5 shadow-5-strong mb-5"
-             style="
-             margin-top: -100px;
-             background: hsla(0, 0%, 100%, 0.8);
-             backdrop-filter: blur(30px);">
+<section class="vh-100">
+    <div class="container-fluid">
+        <div class="row align-items-center">
 
-            <div class="card-body py-5 px-md-5">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">LOGIN <i class="fa fa-sign-in-alt"></i></h2>
+            <div class="col-sm-6 px-0 d-none d-sm-block">
+                <img src="https://mdbootstrap.com/img/new/textures/full/252.jpg"
+                     alt="Login image" class="w-100 vh-100 bg-image-vertical" style="object-fit: cover; object-position: left;">
+            </div>
 
-                        <form action="/login" method="POST" id="user-login">
+            <div class="col-sm-6 text-black">
 
-                            <%- include('include/_loginForm') %>
+                <div class="mb-5 mb-lg-0 h-custom-2 mt-5 pt-5 mr-3">
+                    <div class="card shadow-5-strong mb-5"
+                         style="margin-top: -100px; background: hsla(0, 0%, 100%, 0.8); backdrop-filter: blur(30px);">
 
-                        </form>
+                        <div class="card-body py-5 px-md-5">
+                            <div class="text-center">
+
+                                <h2 class="fw-bold mb-5">LOGIN <i class="fa fa-sign-in-alt"></i></h2>
+
+                                <form action="/login" method="POST" id="user-login">
+
+                                    <%- include('include/_loginForm') %>
+
+                                </form>
+
+                            </div>
+                        </div>
 
                     </div>
                 </div>
+
             </div>
+
         </div>
     </div>
 </section>
