--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -1,39 +1,44 @@
 
 <%- include('include/_header') %>
 
-<section class="text-center">
-    <!-- Background image -->
-    <div class="p-5 bg-image" style="
-        background-image: url('https://mdbootstrap.com/img/new/textures/full/252.jpg');
-        height: 300px;
-        "></div>
-    <!-- Background image -->
+<section class="vh-100">
+    <div class="container-fluid">
+        <div class="row align-items-center">
 
-    <div class="container container-sm">
-        <div class="card mx-4 mx-md-5 shadow-5-strong mb-5"
-             style="
-             margin-top: -100px;
-             background: hsla(0, 0%, 100%, 0.8);
-             backdrop-filter: blur(30px);">
+            <div class="col-sm-6 px-0 d-none d-sm-block">
+                <img src="https://mdbootstrap.com/img/new/textures/full/252.jpg"
+                     alt="Login image" class="w-100 vh-100 bg-image-vertical" style="object-fit: cover; object-position: left;">
+            </div>
 
-            <div class="card-body py-5 px-md-5">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">SIGN UP <i class="fa fa-thumbs-up"></i></h2>
+            <div class="col-sm-6 text-black">
 
-                        <form action="/signup" method="POST" id="user-signup">
+                <div class="mb-5 mb-lg-0 pt-4 mr-3">
+                    <div class="card shadow-5-strong mb-1 mt-0"
+                         style="margin-top: -100px; background: hsla(0, 0%, 100%, 0.8); backdrop-filter: blur(30px);">
 
-                                <%- include('include/_signUpForm') %>
+                        <div class="card-body py-5 px-md-5">
+                            <div class="text-center">
 
-                        </form>
+                                <h2 class="fw-bold mb-5">SIGN UP <i class="fa fa-thumbs-up"></i></h2>
+
+                                <form action="/signup" method="POST" id="user-signup">
+
+                                    <%- include('include/_signUpForm') %>
+
+                                </form>
+
+                            </div>
+                        </div>
 
                     </div>
                 </div>
+
             </div>
 
         </div>
     </div>
-
 </section>
+
+
 
 <%- include('include/_footer') %>
