--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -11,9 +11,9 @@
 
             <div class="col-sm-6 text-black">
 
-                <div class="mb-5 mb-lg-0 h-custom-2 mt-5 pt-5 mr-3">
-                    <div class="card shadow-5-strong mb-5"
-                         style="margin-top: -100px; background: hsla(0, 0%, 100%, 0.8); backdrop-filter: blur(30px);">
+                <div class="row justify-content-center mb-lg-0 h-custom-2 mt-5 pt-5 mr-3">
+                    <div class="card shadow-5-strong mb-5 ml-5"
+                         style="width: 24rem; margin-top: -100px; background: hsla(0, 0%, 100%, 0.6); backdrop-filter: blur(30px);">
 
                         <div class="card-body py-5 px-md-5">
                             <div class="text-center">
