changes to ejs files

--- a/views/addGPU.ejs
+++ b/views/addGPU.ejs
@@ -22,7 +22,7 @@
                         <h2 class="fw-bold mb-5">ADD NEW</h2>
                         <hr>
 
-                        <form action="/gpu/add-gpu/" method="POST" id="add-user">
+                        <form action="/gpu/add-gpu/" method="POST" id="add-gpu">
 
                             <%- include('include/_gpuForm')  %>
 
