--- a/views/include/_editCondition.ejs
+++ b/views/include/_editCondition.ejs
@@ -1,7 +1,7 @@
 
-<select class="form-select" aria-label="Default select example">
+<select name="condition" class="form-select" aria-label="Default select example">
 
-    <option name="">Select a user</option>
+    <option name="condition">Condition</option>
 
     <option <%= gpu.condition === 'Pristine' ? 'selected' : '' %> name="condition" value="Pristine">
         Pristine
