--- a/views/include/_editGPUForm.ejs
+++ b/views/include/_editGPUForm.ejs
@@ -23,7 +23,7 @@
     </div>
 </div>
 
-<div class="form-outline form-text mb-4">
-    <input id="details" type="text" class="form-control form-control-md" name="details" value="<%= gpu.details %>" required>
-    <label for="details" class="form-label">Details</label>
+<div class="form-floating mb-4">
+    <textarea id="details" style="height: 100px" class="form-control form-control-md" name="details" required><%= gpu.details %></textarea>
+    <label for="details">Details</label>
 </div>
