--- a/views/include/_selectCondition.ejs
+++ b/views/include/_selectCondition.ejs
@@ -1,7 +1,7 @@
 
-<select class="form-select" aria-label="Default select example">
+<select name="condition" class="form-select" aria-label="Default select example">
 
-    <option name="" selected>Condition of GPU</option>
+    <option name="condition" selected>Condition</option>
 
     <option name="condition" value="Pristine">
         Pristine
