--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -12,8 +12,8 @@
 
             <div class="col-sm-6 text-black">
 
-                <div class="mb-5 mb-lg-0 pt-4 mr-3">
-                    <div class="card shadow-5-strong mb-1 mt-0"
+                <div class="row justify-content-center mb-5 mb-lg-0 pt-4 mr-2 ml-2">
+                    <div class="card shadow-5-strong mb-2 mt-0"
                          style="margin-top: -100px; background: hsla(0, 0%, 100%, 0.8); backdrop-filter: blur(30px);">
 
                         <div class="card-body py-5 px-md-5">
