--- a/views/viewGPU.ejs
+++ b/views/viewGPU.ejs
@@ -24,7 +24,7 @@
                     </div>
                 </div>
 
-                <table class="table table-borderless table-sm table-responsive-lg text-right mb-3">
+                <table class="table table-fixed table-borderless table-sm table-responsive-lg text-right mb-3">
 
                     <thead>
                     <tr>
