--- a/views/viewMyGPU.ejs
+++ b/views/viewMyGPU.ejs
@@ -9,7 +9,7 @@
         "></div>
     <!-- Background image -->
 
-    <div class="container container-sm">
+    <div class="container container-sm text-center">
         <div class="card mx-4 mx-md-5 shadow-5-strong mb-5"
              style="
              margin-top: -100px;
@@ -24,7 +24,7 @@
                     </div>
                 </div>
 
-                <table class="table table-borderless table-sm table-responsive-lg text-right mb-3">
+                <table class="table table-fixed table-borderless table-sm table-responsive-lg text-right">
 
                     <thead>
                     <tr>
@@ -60,7 +60,7 @@
 
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <a href=" <%= "/userpage/gpu/" + gpu.id%> ">
+                        <a href=" <%= "/userpage/update-gpu/" + gpu.id%> ">
                             <button type="button" class="btn btn-dark btn-lg btn-rounded px-5 mr-3">Edit</button>
                         </a>
 
