--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -21,6 +21,10 @@
 
                                 <h2 class="fw-bold mb-5">SIGN UP <i class="fa fa-thumbs-up"></i></h2>
 
+                                <% if (errorMessage) {%>
+                                    <div class="error-message"><%= errorMessage %></div>
+                                <% } %>
+
                                 <form action="/signup" method="POST" id="user-signup">
 
                                     <%- include('include/_signUpForm') %>
