--- a/views/addNewUser.ejs
+++ b/views/addNewUser.ejs
@@ -22,6 +22,10 @@
                         <h2 class="fw-bold mb-5">CREATE PROFILE</h2>
                         <hr>
 
+                        <% if (errorMessage) {%>
+                            <div class="error-message"><%= errorMessage %></div>
+                        <% } %>
+
                         <form action="/users/add-user/" method="POST" id="add-user">
 
                             <%- include('include/_form')  %>
