--- a/views/include/_myGPUTable.ejs
+++ b/views/include/_myGPUTable.ejs
@@ -47,7 +47,7 @@
                             <td><%= gpu[i].size %></td>
                             <td><%= gpu[i].condition %></td>
                             <td style="width: 30%">
-                                <a href=" <%= "/userpage/" + gpu[i].id %> " class="btn btn-sm btn-success"><i class="fa fa-search"></i></a>
+                                <a href=" <%= "/userpage/view-gpu/" + gpu[i].id %> " class="btn btn-sm btn-success"><i class="fa fa-search"></i></a>
                                 <a href=" <%= "/userpage/update-gpu/" + gpu[i].id %> " class="btn btn-sm btn-primary"><i class="fa fa-pencil-alt"></i></a>
                                 <a href=" <%= "/userpage/delete-gpu/" + gpu[i].id %> " class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a>
                             </td>
