--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -80,3 +80,8 @@
 
 </div>
 
+<label hidden="hidden">
+    <input hidden="hidden" name="emailVerified" value="false">
+    <input hidden="hidden" name="checkFalse" value="false">
+</label>
+
