--- a/views/include/_signUpForm.ejs
+++ b/views/include/_signUpForm.ejs
@@ -63,6 +63,8 @@
 
 <label hidden="hidden">
     <input hidden="hidden" name="role" value="user">
+    <input hidden="hidden" name="emailVerified" value="false">
+    <input hidden="hidden" name="checkFalse" value="false">
 </label>
 
 <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
