--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -80,5 +80,10 @@
 
 </div>
 
+<label hidden="hidden">
+    <input hidden="hidden" name="emailVerified" value="false">
+    <input hidden="hidden" name="checkFalse" value="false">
+</label>
+
 <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
 <a href="/users"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
