--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -18,13 +18,15 @@
                         <div class="card-body py-5 px-md-5">
                             <div class="text-center">
 
-                                <h2 class="fw-bold mb-5">LOGIN <i class="fa fa-sign-in-alt"></i></h2>
+                                <h2 class="fw-bold mb-4">LOGIN <i class="fa fa-sign-in-alt"></i></h2>
 
                                 <form action="/login" method="POST" id="user-login">
 
                                     <%- include('include/_loginForm') %>
 
                                 </form>
+
+                                <div class="mt-2"><a href="/reset">Forgot Password</a></div>
 
                             </div>
                         </div>
