--- a/views/resetByEmail.ejs
+++ b/views/resetByEmail.ejs
@@ -19,17 +19,23 @@
             <div class="card-body py-5 px-md-5">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">
-                            <%= user.emailVerified%>
-                            <i class="fa <%= user.gender === 'Male' ? 'fa-male' : 'fa-female'%>"></i>
-                        </h2><hr>
+                        <h2 class="fw-bold mb-5">ENTER EMAIL</h2>
+                        <hr>
 
-                        <form action=" <%= "/users/update-user/" + user.id + "?_method=PATCH"%> " method="POST" id="update_user">
+                        <form action="/reset" method="POST" id="add-user">
 
-                            <%- include('include/_editForm'); %>
+                            <% if (errorMessage) {%>
+                                <%= errorMessage %>
+                            <% } %>
+
+                            <div class="form-outline mb-4">
+                                <input id="typeEmail" type="email" class="form-control form-control-md" name="email" required>
+                                <label for="typeEmail" class="form-label">Email</label>
+                            </div>
 
                             <button class="btn btn-dark btn-lg btn-rounded px-5 mr-3" type="submit">SUBMIT</button>
-                            <a href="/userpage"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">BACK</button></a>
+                            <a href="/login"><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">LOGIN</button></a>
+
                         </form>
 
                     </div>
