--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -19,7 +19,7 @@
 </div>
 
 <div class="form-outline mb-4">
-    <input id="typePassword" type="password" class="form-control form-control-md" name="password" value="" required>
+    <input id="typePassword" type="password" class="form-control form-control-md" name="password" value="...">
     <label for="typePassword" class="form-label">Password</label>
 </div>
 
