--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,25 +9,27 @@
         "></div>
     <!-- Background image -->
 
-    <div class="container container-sm">
-        <div class="card mx-4 mx-md-5 shadow-5-strong mb-5"
-             style="
+    <div class="container-fluid container-sm">
+        <div class="col d-flex justify-content-center">
+            <div class="card mx-4 mx-md-5 shadow-5-strong mb-5 w-50"
+                 style="
              margin-top: -100px;
              background: hsla(0, 0%, 100%, 0.8);
              backdrop-filter: blur(30px);">
 
-            <div class="card-body py-5 px-md-5">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">HOMEPAGE <i class="fa fa-home"></i></h2>
+                <div class="card-body py-5 px-md-5">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-lg-8">
+                            <h2 class="fw-bold mb-5">HOMEPAGE <i class="fa fa-home"></i></h2>
 
-                        <a href="/login"><button class="btn btn-dark btn-lg btn-rounded px-5">LOGIN</button></a><p></p>
-                        <a href="/signup"><button class="btn btn-dark btn-lg btn-rounded px-5">SIGNUP</button></a><p></p>
+                            <a href="/login"><button class="btn btn-dark btn-lg btn-rounded px-5">LOGIN</button></a><p></p>
+                            <a href="/signup"><button class="btn btn-dark btn-lg btn-rounded px-5">SIGNUP</button></a><p></p>
 
+                        </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
     </div>
 </section>
