--- a/views/signUpPage.ejs
+++ b/views/signUpPage.ejs
@@ -12,7 +12,7 @@
 
             <div class="col-sm-6 text-black">
 
-                <div class="row justify-content-center mb-5 mb-lg-0 pt-4 mr-2 ml-2">
+                <div class="col d-flex justify-content-center">
                     <div class="card shadow-5-strong mb-2 mt-0"
                          style="margin-top: -100px; background: hsla(0, 0%, 100%, 0.8); backdrop-filter: blur(30px);">
 
