added avatar to user model

--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -68,7 +68,7 @@
 
 <div class="form-group text-left">
     <div class="form-check form-check-inline">
-        <h5><label for="status" class="text-uppercase form-check-label">Role</label><br></h5>
+        <h5><label for="role" class="text-uppercase form-check-label">Role</label><br></h5>
     </div>
 
     <div class="form-check form-check-inline">
