--- a/views/include/_signUpForm.ejs
+++ b/views/include/_signUpForm.ejs
@@ -62,6 +62,7 @@
 </div>
 
 <label hidden="hidden">
+    <input hidden="hidden" name="avatarURL" value="s3://user-management-js/male_avatar.png">
     <input hidden="hidden" name="role" value="user">
     <input hidden="hidden" name="emailVerified" value="false">
     <input hidden="hidden" name="checkFalse" value="false">
