--- a/views/addNewUser.ejs
+++ b/views/addNewUser.ejs
@@ -10,32 +10,34 @@
     <!-- Background image -->
 
     <div class="container container-sm">
-        <div class="card mx-4 mx-md-5 shadow-5-strong"
-             style="
-             margin-top: -100px;
+        <div class="col d-flex justify-content-center">
+            <div class="card mx-4 mx-md-5 shadow-5-strong mb-4"
+                 style="
+             margin-top: -200px;
              background: hsla(0, 0%, 100%, 0.8);
              backdrop-filter: blur(30px);">
 
-            <div class="card-body py-5 px-md-5">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">CREATE PROFILE</h2>
-                        <hr>
+                <div class="card-body py-5 px-md-5">
+                    <div class="row d-flex justify-content-center">
+                        <div class="col-lg-12">
+                            <h2 class="fw-bold mb-5">CREATE PROFILE</h2>
+                            <hr>
 
-                        <% if (errorMessage) {%>
-                            <div class="error-message"><%= errorMessage %></div>
-                        <% } %>
+                            <% if (errorMessage) {%>
+                                <div class="error-message"><%= errorMessage %></div>
+                            <% } %>
 
-                        <form action="/users/add-user/" method="POST" id="add-user">
+                            <form action="/users/add-user/" method="POST" id="add-user">
 
-                            <%- include('include/_form')  %>
+                                <%- include('include/_form')  %>
 
-                        </form>
+                            </form>
 
+                        </div>
                     </div>
                 </div>
-            </div>
 
+            </div>
         </div>
     </div>
 
