--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -23,8 +23,10 @@
     <label for="typePassword" class="form-label">Password</label>
 </div>
 
-<div class="form-group">
-    <label for="gender" class="text-uppercase">Gender</label><br>
+<div class="form-group text-left">
+    <div class="form-check form-check-inline">
+        <h5><label for="status" class="text-uppercase form-check-label">Gender</label><br></h5>
+    </div>
 
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" value="Male" name="gender" id="radio1">
@@ -42,8 +44,10 @@
 
 </div>
 
-<div class="form-group">
-    <label for="status" class="text-uppercase">Status</label><br>
+<div class="form-group text-left">
+    <div class="form-check form-check-inline">
+        <h5><label for="status" class="text-uppercase form-check-label">Status</label><br></h5>
+    </div>
 
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" value="Employed" name="status" id="radio3">
@@ -61,8 +65,10 @@
 
 </div>
 
-<div class="form-group">
-    <label for="role" class="text-uppercase">Status</label><br>
+<div class="form-group text-left">
+    <div class="form-check form-check-inline">
+        <h5><label for="role" class="text-uppercase form-check-label">Role</label><br></h5>
+    </div>
 
     <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" value="admin" name="role" id="radio5">
@@ -81,6 +87,7 @@
 </div>
 
 <label hidden="hidden">
+    <input hidden="hidden" name="avatarURL" value="s3://user-management-js/male_avatar.png">
     <input hidden="hidden" name="emailVerified" value="false">
     <input hidden="hidden" name="checkFalse" value="false">
 </label>
