--- a/views/include/_sessionDetails.ejs
+++ b/views/include/_sessionDetails.ejs
@@ -7,7 +7,7 @@
             <div class="col-md-12 text-center">
                 <h2 class="pt-3 pb-2 text-center font-bold font-up">Session Details <i class="fa fa-user"></i></h2>
 
-                <img src=" <%= "/public/avatars/" + user.id + ".png" %> " class="rounded-circle" style="width: 150px;" alt="Avatar" />
+                <img src="<%=user.avatarURL%>" class="rounded-circle shadow-4" style="width: 150px; height: 150px;" alt="Avatar" />
 
                 <div class="text-center">
                     <p>Logged in as</p>
