--- a/views/include/_editForm.ejs
+++ b/views/include/_editForm.ejs
@@ -88,6 +88,7 @@
 </div>
 
 <label hidden="hidden">
+    <input hidden="hidden" name="avatarURL" value="<%= user.avatarURL %>">
     <input hidden="hidden" name="emailVerified" value="true">
     <input hidden="hidden" name="checkFalse" value="false">
 </label>
