--- a/views/editUserSelf.ejs
+++ b/views/editUserSelf.ejs
@@ -21,7 +21,7 @@
                     <div class="card-body py-5 px-md-5">
                         <div class="row d-flex justify-content-center">
                             <div class="col-lg-12">
-                                <img src=" <%= "/public/avatars/" + user.id + ".png" %> " class="rounded-circle shadow-4" style="width: 150px; height: 150px;" alt="Avatar" />
+                                <img src="<%=user.avatarURL%>" class="rounded-circle shadow-4" style="width: 150px; height: 150px;" alt="Avatar" />
                                 <a href=" <%= "/userpage/update-user/upload-image/" + user.id %> "><button class="btn btn-dark btn-lg btn-rounded px-5" type="button">Change Avatar</button></a>
                                 <hr>
 
