added required for user and pass

--- a/views/include/_loginForm.ejs
+++ b/views/include/_loginForm.ejs
@@ -5,12 +5,12 @@
 <hr>
 
 <div class="form-outline mb-4">
-    <input id="typeEmail" type="email" class="form-control" name="email">
+    <input id="typeEmail" type="email" class="form-control" name="email" required>
     <label for="typeEmail" class="form-label">Email</label>
 </div>
 
 <div class="form-outline mb-4">
-    <input id="typePassword" type="password" class="form-control" name="password">
+    <input id="typePassword" type="password" class="form-control" name="password" required>
     <label for="typePassword" class="form-label">Password</label>
 </div>
 
