changed image to jpg

--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -87,7 +87,7 @@
 </div>
 
 <label hidden="hidden">
-    <input hidden="hidden" name="avatarURL" value="s3://user-management-js/male_avatar.png">
+    <input hidden="hidden" name="avatarURL" value="https://user-management-js.s3.us-east-2.amazonaws.com/male_avatar.jpg">
     <input hidden="hidden" name="emailVerified" value="false">
     <input hidden="hidden" name="checkFalse" value="false">
 </label>
