--- a/views/emailVerification.ejs
+++ b/views/emailVerification.ejs
@@ -19,10 +19,10 @@
             <div class="card-body py-5 px-md-5">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">EMAIL VERIFIED <i class="fa fa-check"></i></h2>
+                        <h2 class="fw-bold mb-5">EMAIL VERIFICATION <i class="fa fa-check"></i></h2>
 
                         <% if (errorMessage) {%>
-                            <div class="error-message"><%= errorMessage %></div>
+                            <h3 class="error-message"><%= errorMessage %></h3>
                         <% } %>
                         <hr>
 
