--- a/views/selectedUserInfo.ejs
+++ b/views/selectedUserInfo.ejs
@@ -19,7 +19,7 @@
             <div class="card-body py-5 px-md-5">
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-8">
-                        <img src=" <%= "/public/avatars/" + user.id + ".png" %> " class="rounded-circle" style="width: 150px;" alt="Avatar" />
+                        <img src=" <%= user.avatarURL %> " class="rounded-circle" style="width: 150px;" alt="Avatar" />
                         <h2 class="fw-bold mb-3"><%= user.firstName + " " + user.lastName %></h2>
                         <hr>
                     </div>
