--- a/views/include/_signUpForm.ejs
+++ b/views/include/_signUpForm.ejs
@@ -27,14 +27,14 @@
     <label for="gender" class="text-uppercase">Gender</label><br>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" value="Male" name="gender" id="radio1">
+        <input class="form-check-input" type="radio" value="Male" name="gender" id="radio1" required>
         <label class="form-check-label" for="radio1">
             Male
         </label>
     </div>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" value="Female" name="gender" id="radio2">
+        <input class="form-check-input" type="radio" value="Female" name="gender" id="radio2" required>
         <label class="form-check-label" for="radio2">
             Female
         </label>
@@ -46,14 +46,14 @@
     <label for="status" class="text-uppercase">Status</label><br>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" value="Employed" name="status" id="radio3">
+        <input class="form-check-input" type="radio" value="Employed" name="status" id="radio3" required>
         <label class="form-check-label" for="radio3">
             Employed
         </label>
     </div>
 
     <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" value="Unemployed" name="status" id="radio4">
+        <input class="form-check-input" type="radio" value="Unemployed" name="status" id="radio4" required>
         <label class="form-check-label" for="radio4">
             Unemployed
         </label>
